--- a/public/404.html
+++ b/public/404.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>body {margin:0}</style>
+    <style>
+    body {
+      margin:0
+    }
+    #NotFoundComponent {
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 13px;
+      letter-spacing: 3px;
+    }
+</style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="NotFoundComponent">
+      <h1>Not Found</h1>
+      <p>Página no encontrada</p>
+  </div>
   </body>
 </html>
